--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_storage: ^11.6.0
   firebase_auth: ^4.16.0
+  firebase_app_check: ^0.2.0
 
   
 
